Exec changes to support QNX, use logging instead of printStackTrace (#216)